--- a/web_week4_student/src/main/webapp/htmlpage/hi.html
+++ b/web_week4_student/src/main/webapp/htmlpage/hi.html
@@ -10,10 +10,13 @@
 		
 			<source src="https://www.youtube.com/watch?v=ebBtjwENcxw" type = "video/mp4"/>
 			<source src="https://www.youtube.com/watch?v=ebBtjwENcxw" type = "video/webm"/>
-			
-			
-			
 		</video>
+		
+		<form action="day17.html">
+			
+			<input type="text" name="search">
+		
+		</form>
 		
 		
 	</body>
